--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "socket.io-client": "^4.6.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
+    "webpack": "^5.82.0",
     "yarn": "^1.22.19"
   },
   "scripts": {
