--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "realtime",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +20,7 @@
     "socket.io-client": "^4.6.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
+    "webpack": "^5.82.0",
     "yarn": "^1.22.19"
   },
   "scripts": {
